--- a/addons/project/static/src/less/project_dashboard.less
+++ b/addons/project/static/src/less/project_dashboard.less
@@ -48,8 +48,20 @@
         .o_label {
             color: white;
         }
+        .o_needaction{
+            position: absolute;
+            top: 5px;
+            right: 5px;
+            color: white;
+            font-size: small;
+            opacity: 0.5;
+            &:hover{
+                opacity:1;
+            }
+        }
 
         .o_project_kanban_box {
+            position: relative;
             text-align: center;
             padding: 15px 0 15px 0;
             .o-flex(1, 1, auto);
